--- a/css-sass/view/subtest/pod/_color.scss
+++ b/css-sass/view/subtest/pod/_color.scss
@@ -7,9 +7,8 @@
 		margin: 0 auto;
 	}
 
-	.marker {
+	.widget-indicator {
 		display: block;
-		width: image-width('images/common/result-good-2x.png') / 2;
 		margin: 0 auto;
 		cursor: pointer;
 	}
