--- a/js/template/subtest/Range.html
+++ b/js/template/subtest/Range.html
@@ -9,7 +9,7 @@
                         <span class="unit">{{unit}}</span>
                     </div>
                 </div>
-                <div class="pointer"></div>
+                <div class="widget-indicator big {{#if isBad}}bad{{/if}}"></div>
             </div>
         </div>
 
