--- a/js/template/subtest/RangeGroupItem.html
+++ b/js/template/subtest/RangeGroupItem.html
@@ -7,7 +7,7 @@
 
     <div class="limit end"><div class="dash"></div></div>
 
-    <div class="value"><div class="marker"></div></div>
+    <div class="value"><div class="widget-indicator big {{#if isBad}}bad{{/if}}"></div></div>
 
     <div class="view-subtest-range-group-item-details">
         <h2 class="title">{{title}}</h2>
