--- a/js/template/subtest/Select.html
+++ b/js/template/subtest/Select.html
@@ -2,7 +2,7 @@
 	<div class="options">
 		{{#each options}}
 			<div class="option">
-                <div class="widget-indicator"></div>
+                <div class="indicator"></div>
 				<div class="name">{{.}}</div>
 			</div>
 		{{/each}}
