--- a/js/template/subtest/TypesOfCell2.html
+++ b/js/template/subtest/TypesOfCell2.html
@@ -19,7 +19,7 @@
                 </div>
 
                 <div class="range">
-                    <span class="widget-indicator {{#if fighter.isBad}}bad{{/if}}"></span>
+                    <span class="indicator {{#if fighter.isBad}}bad{{/if}}"></span>
                     <span class="text">Expected Range {{fighter.min}}%-{{fighter.max}}%</span>
                 </div>
 
@@ -53,7 +53,7 @@
                 </div>
 
                 <div class="range">
-                    <span class="widget-indicator {{#if defender.isBad}}bad{{/if}}"></span>
+                    <span class="indicator {{#if defender.isBad}}bad{{/if}}"></span>
                     <span class="text">Expected Range {{defender.min}}%-{{defender.max}}%</span>
                 </div>
 
@@ -86,7 +86,7 @@
                 </div>
 
                 <div class="range">
-                    <span class="widget-indicator {{#if watcher.isBad}}bad{{/if}}"></span>
+                    <span class="indicator {{#if watcher.isBad}}bad{{/if}}"></span>
                     <span class="text">Expected Range {{watcher.min}}%-{{watcher.max}}%</span>
                 </div>
 
