--- a/js/template/subtest/pod/Color.html
+++ b/js/template/subtest/pod/Color.html
@@ -1,7 +1,7 @@
 <div class="view-subtest-pod-color {{#if isBad}}bad{{/if}}">
 	<img class="scale" src="images/subtest/pod/color/{{#if isBad}}bad{{else}}good{{/if}}-2x.png" alt="" />
     
-    <span class="widget-indicator {{#if isBad}}bad{{/if}}"></span>
+    <div class="indicator"></div>
 
 	<div class="label">{{label}}</div>
 
