--- a/js/template/test/urineanalysis/MicroscopicParticle.html
+++ b/js/template/test/urineanalysis/MicroscopicParticle.html
@@ -6,7 +6,7 @@
                     <div class="yui3-u-c">
                         <div class="pod">
                             <div class="inner">
-                                <span class="widget-indicator bad"></span>
+                                <span class="indicator bad"></span>
                                 <span class="label">{{label}}</span>
                             </div>
                         
@@ -24,7 +24,7 @@
                 <div class="yui3-u-c">
                     <div class="pod">
                         <div class="inner">
-                            <span class="widget-indicator"></span>
+                            <span class="indicator"></span>
                             <span class="label">None Found</span>
                         </div>
 
