--- a/js/template/widget/Indicator.html
+++ b/js/template/widget/Indicator.html
@@ -1,1 +1,3 @@
-<span class="widget-indicator {{#if isBad}}bad{{/if}} {{#if isBig}}big{{/if}}"></span>
+<span class="widget-indicator {{#if isBad}}bad{{/if}} {{#if isBig}}big{{/if}}">
+    <span class="dot"></span>
+</span>
