--- a/css/screen.css
+++ b/css/screen.css
@@ -2102,10 +2102,36 @@ span.placeholder {
   height: 32px;
   display: inline-block;
   cursor: pointer;
+  position: relative;
   background-image: url("../images/widget/indicator/good.png");
+}
+.widget-indicator .dot {
+  position: absolute;
+  display: block;
+  width: 8px;
+  height: 8px;
+  top: 50%;
+  left: 50%;
+  margin: -4px 0 0 -4px;
+  background-color: #00f7ff;
+  border-radius: 4px;
+  -webkit-transition: all 0.1s ease-out;
+  -moz-transition: all 0.1s ease-out;
+  -o-transition: all 0.1s ease-out;
+  transition: all 0.1s ease-out;
+  display: none\9;
+}
+.widget-indicator:hover .dot {
+  width: 12px;
+  height: 12px;
+  margin: -6px 0 0 -6px;
+  border-radius: 6px;
 }
 .widget-indicator.bad {
   background-image: url("../images/widget/indicator/bad.png");
+}
+.widget-indicator.bad .dot {
+  background-color: #fff868;
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi) {
   .widget-indicator {
@@ -2131,6 +2157,18 @@ span.placeholder {
   .widget-indicator.big.bad {
     background-image: url("../images/widget/indicator/bad-big-2x.png");
   }
+}
+.widget-indicator.big .dot {
+  width: 10px;
+  height: 10px;
+  margin: -5px 0 0 -5px;
+  border-radius: 5px;
+}
+.widget-indicator.big:hover .dot {
+  width: 16px;
+  height: 16px;
+  margin: -8px 0 0 -8px;
+  border-radius: 8px;
 }
 
 .view-widget-busy {
