widget/arrow: smoother bg scroll https://app.asana.com/0/7908989541876/8021972699648

--- a/css-sass/view/widget/_arrow.scss
+++ b/css-sass/view/widget/_arrow.scss
@@ -33,7 +33,7 @@ $widgetArrowWidthPhone: 17px;
         background-position: ($width * 1) 0;
         border-radius: ($width / 2);
 
-        @include transition(background-position 0.5s);
+        @include transition(background-position 0.25s linear);
 
         @media 
         only screen and (-webkit-min-device-pixel-ratio: 2), 
