Added initial Survey code. https://app.asana.com/0/7908989541876/8021972699648

--- a/css-sass/screen.scss
+++ b/css-sass/screen.scss
@@ -27,6 +27,12 @@ $max-page-width: 1000px;
 // lib
 @import "lib/qtip/jquery.qtip-2.0.1";
 
+// lib: foundation
+$include-html-global-classes: false;
+@import "lib/foundation/variables";
+@import "lib/foundation/components/global";
+@import "lib/foundation/components/reveal";
+
 // base styles
 @import "base";
 
