--- a/js/template/Navigation.html
+++ b/js/template/Navigation.html
@@ -1,26 +1,30 @@
 <div class="view-navigation yui3-hidden-tablet yui3-hidden-desktop">
-    <div class="nav-items">
-        <div class="nav-options">
-            {{!--
-            <div class="nav-item section overview" data-section="">
-                <span class="title">Overview</span>
-                <div class="icon"></div>
-                <div class="shadow"></div>
+    <div class="bg"></div>
+    
+    <div class="navigation">
+        <div class="nav-items">
+            <div class="nav-options">
+                {{!--
+                <div class="nav-item section overview" data-section="">
+                    <span class="title">Overview</span>
+                    <div class="icon"></div>
+                    <div class="shadow"></div>
+                </div>
+                --}}
+                {{#each tests}}
+                <div class="nav-item section test-{{type}} test-id-{{id}}" data-section="section/{{id}}">
+                    <span class="title">{{title}}</span>
+                    <div class="icon"></div>
+                    <div class="shadow"></div>
+                </div>
+                {{/each}}
             </div>
-            --}}
-            {{#each tests}}
-            <div class="nav-item section test-{{type}} test-id-{{id}}" data-section="section/{{id}}">
-                <span class="title">{{title}}</span>
-                <div class="icon"></div>
-                <div class="shadow"></div>
-            </div>
-            {{/each}}
-        </div>
 
-            <div class="nav-item nav-toggle">
-                <span class="title">Show/Hide Menu</span>
-                <div class="icon"></div>
-                <div class="shadow"></div>
-            </div>
+                <div class="nav-item nav-toggle">
+                    <span class="title">Show/Hide Menu</span>
+                    <div class="icon"></div>
+                    <div class="shadow"></div>
+                </div>
+        </div>
     </div>
 </div>
