--- a/css-sass/view/_navigation.scss
+++ b/css-sass/view/_navigation.scss
@@ -1,110 +1,132 @@
 .view-navigation {
-    $iconWidth: image-width("../images/navigation/icons/menu.png");
-    $iconHeight: image-height("../images/navigation/icons/menu.png");
-    $navigation-sprite: sprite-map("navigation/icons/*.png");
-    $navigation-2x-sprite: sprite-map("navigation/icons-2x/*.png");
-
-    position: fixed;
-    top:65px;
-    right: 0;
-    z-index: 2;
-
-    @include transition(all .1s ease-in-out);
-
-    &.active {
+    .bg {
+        position: fixed;
+        height: 100%;
+        width: 100%;
+        background-color: black;
+        @include opacity(0);
+        visibility: hidden;
+        z-index: 4;
         top: 0;
+
+        @include transition(all 0.7s);
     }
 
-    .nav-items {
-        margin: (round((55px - $iconHeight) / 2) + 2px) round((60px - $iconWidth) / 2) 0 0;
-        padding: 0;
-        list-style-type: none;
-        
-        position: relative;
-        width: $iconWidth;
-    }
-
-    .nav-options {
-        .nav-item {
-            @include opacity(0);
-            margin-bottom: 8px;
+    &.expanded {
+        .bg {
+            visibility: visible;
+            @include opacity(0.5);
         }
     }
 
-    .nav-item {
-        width: $iconWidth;
-        height: $iconHeight;
-        cursor: pointer;
+    .navigation {
+        $iconWidth: image-width("../images/navigation/icons/menu.png");
+        $iconHeight: image-height("../images/navigation/icons/menu.png");
+        $navigation-sprite: sprite-map("navigation/icons/*.png");
+        $navigation-2x-sprite: sprite-map("navigation/icons-2x/*.png");
 
-        .icon {
-            width: 100%;
-            height: 100%;
+        position: fixed;
+        top:65px;
+        right: 0;
+        z-index: 5;
 
-            background-repeat: no-repeat;
-            background-image: sprite-url($navigation-sprite);
+        @include transition(all .1s ease-in-out);
 
-            @media 
-            only screen and (-webkit-min-device-pixel-ratio: 2), 
-            only screen and (min-resolution: 192dpi) {
-                background-image: sprite-url($navigation-2x-sprite);
-                background-size: 100%;
-            }
-        }
-
-        position: absolute;
-        top: 0;
-        left: 0;
-
-        .title {
-            display: none;
-        }
-
-        .shadow {
-            $image: "../images/navigation/shadow.png";
-            $image2x: "../images/navigation/shadow.png";
-
-            width: image-width($image);
-            height: image-height($image);
-
-            position: absolute;
-            z-index: -1;
+        &.is-away-from-top {
             top: 0;
-            right: 0;
+        }
 
-            background-image: url($image);
+        .nav-items {
+            margin: floor((55px - $iconHeight) / 2) floor((60px - $iconWidth) / 2) 0 0;
+            padding: 0;
+            list-style-type: none;
+            
+            position: relative;
+            width: $iconWidth;
+        }
 
-            @media 
-            only screen and (-webkit-min-device-pixel-ratio: 2), 
-            only screen and (min-resolution: 192dpi) {
-                background-image: url($image2x);
-                background-size: 100%;
+        .nav-options {
+            .nav-item {
+                @include opacity(0);
+                margin-bottom: 8px;
             }
         }
 
-        @mixin nav-item ($type, $icon) {
-            &.#{$type} .icon {
-                background-position: sprite-position($navigation-sprite, #{$icon});
+        .nav-item {
+            width: $iconWidth;
+            height: $iconHeight;
+            cursor: pointer;
 
-                // @see http://www.brettjankord.com/2012/11/28/cross-browser-retinahigh-resolution-media-queries/
+            .icon {
+                width: 100%;
+                height: 100%;
+
+                background-repeat: no-repeat;
+                background-image: sprite-url($navigation-sprite);
+
                 @media 
                 only screen and (-webkit-min-device-pixel-ratio: 2), 
                 only screen and (min-resolution: 192dpi) {
-                    background-position: 0 round(nth(sprite-position($navigation-2x-sprite, #{$icon}), 2) / 2);
+                    background-image: sprite-url($navigation-2x-sprite);
+                    background-size: 100%;
                 }
             }
+
+            position: absolute;
+            top: 0;
+            left: 0;
+
+            .title {
+                display: none;
+            }
+
+            .shadow {
+                $image: "../images/navigation/shadow.png";
+                $image2x: "../images/navigation/shadow.png";
+
+                width: image-width($image);
+                height: image-height($image);
+
+                position: absolute;
+                z-index: -1;
+                top: 0;
+                right: 0;
+
+                background-image: url($image);
+
+                @media 
+                only screen and (-webkit-min-device-pixel-ratio: 2), 
+                only screen and (min-resolution: 192dpi) {
+                    background-image: url($image2x);
+                    background-size: 100%;
+                }
+            }
+
+            @mixin nav-item ($type, $icon) {
+                &.#{$type} .icon {
+                    background-position: sprite-position($navigation-sprite, #{$icon});
+
+                    // @see http://www.brettjankord.com/2012/11/28/cross-browser-retinahigh-resolution-media-queries/
+                    @media 
+                    only screen and (-webkit-min-device-pixel-ratio: 2), 
+                    only screen and (min-resolution: 192dpi) {
+                        background-position: 0 round(nth(sprite-position($navigation-2x-sprite, #{$icon}), 2) / 2);
+                    }
+                }
+            }
+
+            @include nav-item(nav-toggle, menu);
+            @include nav-item(test-chemistry, chemistry);
+            @include nav-item(test-cbc, cbc);
+            @include nav-item(test-heartworm, heartworm);
+            @include nav-item(test-thyroxine, t4);
+            @include nav-item(test-urine, urine);
+            @include nav-item(test-felv-fiv, felv-fiv);
+            @include nav-item(test-ova, ova);
+            @include nav-item(test-accuplex, accuplex);
+
+            // TODO: we don't have an icon for overview
+            //@include nav-item(overview, top);
         }
-
-        @include nav-item(nav-toggle, menu);
-        @include nav-item(test-chemistry, chemistry);
-        @include nav-item(test-cbc, cbc);
-        @include nav-item(test-heartworm, heartworm);
-        @include nav-item(test-thyroxine, t4);
-        @include nav-item(test-urine, urine);
-        @include nav-item(test-felv-fiv, felv-fiv);
-        @include nav-item(test-ova, ova);
-        @include nav-item(test-accuplex, accuplex);
-
-        // TODO: we don't have an icon for overview
-        //@include nav-item(overview, top);
     }
 }
