survey: fully implemented https://app.asana.com/0/7908989541876/8029207130206

--- a/css-sass/screen.scss
+++ b/css-sass/screen.scss
@@ -54,6 +54,7 @@ $include-html-global-classes: false;
 @import "view/mainmenu";
 @import "view/navigation";
 @import "view/overview";
+@import "view/survey";
 
 // tests
 @import "view/test/base";
