--- a/css/screen.css
+++ b/css/screen.css
@@ -2367,7 +2367,7 @@ span.placeholder {
   background-repeat: repeat-x;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
-  padding: 0 20px 0 160px;
+  padding: 0 20px 15px 160px;
   /* tablet */
   /* Phone */
 }
@@ -2386,7 +2386,7 @@ span.placeholder {
   font-weight: bold;
   font-size: 167%;
   cursor: pointer;
-  padding: 15px 0 15px 0;
+  padding: 15px 0 0 0;
   /* Phone */
 }
 .view-widget-test-subsection > .header .title {
@@ -2409,18 +2409,11 @@ span.placeholder {
 }
 .view-widget-test-subsection > .body {
   display: none;
-  padding-bottom: 15px;
 }
 .view-widget-test-subsection > .body > .text {
   margin-top: 0;
   margin-bottom: 0;
   color: #6c6c6c;
-}
-.view-widget-test-subsection.expanded > .header {
-  padding-bottom: 0;
-}
-.view-widget-test-subsection.expanded > .body {
-  display: block;
 }
 
 .page-section-narrow {
